src/test/ui/parser/diff-markers/use-statement.stderr
error: encountered diff marker
  --> $DIR/use-statement.rs:2:1
   |
LL | <<<<<<< HEAD
   | ^^^^^^^ start
LL |     bar,
LL | =======
   | ^^^^^^^ middle
LL |     baz,
LL | >>>>>>> branch
   | ^^^^^^^ end

error: aborting due to previous error

